OU. Documentacion metodo store
